# ChangeLog for sys-devel/parity
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Jul 2009; Markus Duft <mduft@gentoo.org>
  files/parity-prefix-wrapper.sh:
  fixed compiler wrapper to add include dirs also while linking. required if
  doing compile and link in one step

  17 Jun 2009; Markus Duft <mduft@gentoo.org>
  files/parity-prefix-wrapper.sh:
  fixed parity wrapper script to work without EPREFIX set too

  09 Jun 2009; Markus Duft <mduft@gentoo.org>
  +files/parity-1.2.2-lib-search.patch:
  fix library search which could choke on a directory with the same name as
  the searched lib

  26 Jan 2009; Markus Duft <mduft@gentoo.org>
  files/parity-prefix-wrapper.sh:
  updated prefix wrapper script to handle library paths correctly

*parity-1.2.2 (15 Jan 2009)

  15 Jan 2009; User generated by SUA Setup Script <mduft@gentoo.org>
  -parity-1.2.0.ebuild, +parity-1.2.2.ebuild:
  updated parity version

*parity-1.2.1 (17 Dec 2008)

  17 Dec 2008; Markus Duft <mduft@gentoo.org> -parity-1.1.0.ebuild,
  +parity-1.2.1.ebuild:
  updated to 1.2.1

  19 Nov 2008; Markus Duft <mduft@gentoo.org>
  +files/parity-1.2.0-exception-handling.patch, parity-1.2.0.ebuild:
  added patch to repair exception handling

  03 Nov 2008; Markus Duft <mduft@gentoo.org>
  +files/parity-1.2.0-winnt-version.patch, parity-1.2.0.ebuild,
  parity-1.2.0.ebuild, parity-1.2.0.ebuild:
  added minimum winnt version define.

*parity-1.2.0 (29 Oct 2008)

  29 Oct 2008; Markus Duft <mduft@gentoo.org> -parity-1.0.5.ebuild,
  +parity-1.2.0.ebuild:
  added 1.2.0, removed 1.0.5

  25 Sep 2008; Markus Duft <mduft@gentoo.org>
  +files/parity-1.1.0-loader-wrong-define.patch,
  +files/parity-1.1.0-missing-include.patch,
  +files/parity-1.1.0-percent-defines.patch, parity-1.1.0.ebuild:
  added various patches for small deficiencies

  27 Aug 2008; Markus Duft <mduft@gentoo.org>
  +files/parity-1.1.0-entry-points.patch, parity-1.1.0.ebuild: