@@ -10,8 +10,10 @@ AUX parity-1.2.2-lib-search.patch 615 RMD160 732b7eaa74db92b0d86ea9a87dd5e16947a
 AUX parity-prefix-wrapper.sh 1082 RMD160 3ecdc82d6f47fd09309bbe29fa12cc85b91845a2 SHA1 4926c55de978ab3d0585eab35e4ba816e6f426c5 SHA256 d6ab349a366544263883df96a859961bedccb827a353bbd6df96d9fa5ebee037
 DIST parity-1.2.1.tar.gz 438188 RMD160 00330ef4193363b3681a5e4d23401f8185293ab8 SHA1 1bc2d3fc7ffc8c37e470976348498c26824fc3e4 SHA256 d6019d3e68e8e7685b9d729ee4f7419e8814ea756fd340f7416f98a65b38c237
 DIST parity-1.2.2.tar.gz 438660 RMD160 712172e64308c458de314b6b3e5a16ebd8cab657 SHA1 c11421ed33f7808eb5b709f8ac13aecb8a4f5a32 SHA256 caae0e9a84c7be75ab2460ca224352ae9914a025395f5f1e936df9d7bcee242f
+DIST parity-1.2.3.tar.gz 452292 RMD160 087934a38c5be07a57ef72c22d76c1f30cc4c80c SHA1 46c6025c753cbdcecc9a04dda9b773f56eb0c581 SHA256 021c2f6d4c1b58c62573b305f93da7eb9bdb870e845589909039b9cff0764c8d
 EBUILD parity-1.2.1.ebuild 1454 RMD160 8c96d5cc981103773caed90376d6e83e741c8de2 SHA1 eec3b4bf2cc9695053147db050ec5f3c659ddfff SHA256 c8214c8d0a8d8ba0aa217af1dfaf5c2f2acfd34cc7951fc0e1620683c4a1aad5
 EBUILD parity-1.2.2.ebuild 1454 RMD160 a18b52680ea440020849e60730ab7a8d905f0579 SHA1 fcc763e82422d10fb467c7551e4f0509781f4efb SHA256 6834ea7bc9bb06857905bcb9348ff310e9889a25ae0659c38aa14bc6a7a13794
+EBUILD parity-1.2.3.ebuild 1420 RMD160 288d231468d517ca9d546e6396b5f9c28211230d SHA1 b7bd411da0664a1269fa83a69efe6ccdde40fca0 SHA256 637eeba17a107168433b786d3d544c37434629f2dd94113b065cd6ae49bec8b6
 EBUILD parity-9999.ebuild 1858 RMD160 e766565a57e235ed6a398400f685675cfc9cd685 SHA1 c8b9b04686561d1828f71e68aa93aab919cd3d59 SHA256 58d77cf4f03d636850675308066df66df46209df30480b9d455e523fe51feec7
-MISC ChangeLog 3165 RMD160 17d46d4bd835e6d47bdd66bd64f88a1f1f76c9b8 SHA1 4eac06d646dd34ee65e389208dd43f31cc93a948 SHA256 449ea1944efa241f4985668a9fc28b1d413ab440447cfbf4d8082b426ab1bcff
+MISC ChangeLog 3289 RMD160 f59adee0bd3526cdefc963f5c705e2c773689f12 SHA1 5ed8e75cd1c35157a7e0c71f65c81140c53ae79e SHA256 17ef30f50291bfdaecd9b4a97ecfc0fc99cb8f1963823277a52086ead55abc4c
 MISC metadata.xml 255 RMD160 5cf1b4dac09b88b5d9d409a808c902351565c87d SHA1 18362d69850fd6e1cfdd5af125ca3676e439072e SHA256 fbdb7a8bcb38969ff60fddf3131f3ee837da046a77d73c22b27e81fb05233a45
